--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -12,22 +12,37 @@ pool:
 stages:
 - stage: TerraformValidate
   jobs:
-    - job: TerraformValidateJob
-      continueOnError: false
-      steps:
+  - job: TerraformValidateJob
+    continueOnError: false
+    steps:
       - task: PublishPipelineArtifact@1
-        displayName: Publish Artifacts
+        displayName: Publicar artefacto
         inputs:
           targetPath: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-          artifact: 'terraform-manifests-out'
+          artifact: 'terraform-manifest-out'
           publishLocation: 'pipeline'
-      - task: TerraformInstaller@0
-        displayName: Terraform Install
-        inputs:
-          terraformVersion: 'latest'
+      
+      -  task: TerraformInstaller@0
+         displayName: Instalacion Terraform
+         inputs:
+            terraformVersion: 'latest'
+        
       - task: TerraformCLI@0
-        displayName: Terraform Validate
+        displayName: Terraform Init
+        inputs:
+          command: 'init'
+          backendType: 'azurerm'
+          backendServiceArm: 'terraform-aks-azurerm-svc-con'
+          ensureBackend: true
+          backendAzureRmResourceGroupName: 'AKStfresourcegroup'
+          backendAzureRmResourceGroupLocation: 'East us'
+          backendAzureRmStorageAccountName: 'AKStfstorageaccount'
+          backendAzureRmContainerName: 'tfstatefiles'
+          backendAzureRmKey: 'aks-base.tfstate'
+          allowTelemetryCollection: false
+      - task: TerraformCLI@0
         inputs:
           command: 'validate'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-          allowTelemetryCollection: false 
+          allowTelemetryCollection: false
+
