--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -22,7 +22,7 @@ stages:
           artifact: 'terraform-manifest-out'
           publishLocation: 'pipeline'
       
-      -  task: TerraformInstaller@0
+      -  task: ms-devlabs.custom-terraform-tasks.custom-terraform-installer-task.TerraformInstaller@0
          displayName: Instalacion Terraform
          inputs:
             terraformVersion: 'latest'
